// Copyright (c) 2021 Sony Pictures Imageworks, et al.
// SPDX-License-Identifier: Apache-2.0
// https://github.com/imageworks/spk
syntax = "proto3";

package spfs;

message Tag {}

message LsTagsRequest {
    string path = 1;
}
message LsTagsResponse {
    repeated string entries = 1;
}

message ResolveTagRequest {
    string tag = 1;
}
message ResolveTagResponse {
    Tag tag = 1;
}

message FindTagsRequest {
    bytes digest = 1;
}
message FindTagsResponse {
    repeated Tag tags = 1;
}

message IterTagSpecsRequest {}
message IterTagSpecsResponse {
    repeated string tag_specs = 1;
}

message ReadTagRequest {
    string tag_spec = 1;
}
message ReadTagResponse {
    repeated Tag tags = 1;
}

message PushRawTagRequest {
    Tag tag = 1;
}
message PushRawTagResponse {}

message RemoveTagStreamRequest {
    string tag_Spec = 1;
}
message RemoveTagStreamResponse {}

message RemoveTagRequest {
    Tag tag = 1;
}
message RemoveTagResponse {}

service TagService {
    rpc LsTags(LsTagsRequest) returns (LsTagsResponse);
    rpc ResolveTag(ResolveTagRequest) returns (ResolveTagResponse);
    rpc FindTags(FindTagsRequest) returns (FindTagsResponse);
    rpc IterTagSpecs(IterTagSpecsRequest) returns (IterTagSpecsResponse);
    rpc ReadTag(ReadTagRequest) returns (ReadTagResponse);
    rpc PushRawTag(PushRawTagRequest) returns (PushRawTagResponse);
    rpc RemoveTagStream(RemoveTagStreamRequest) returns (RemoveTagStreamResponse);
    rpc RemoveTag(RemoveTagRequest) returns (RemoveTagResponse);
}
